[project]
name = "muppet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-qdrant>=0.1.0",
    "langfuse>=2.0.0",
    "langgraph>=0.2",
    "paramiko>=3.4.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.9.0",
    "rich>=13.7.0",
    "uvicorn>=0.29.0",
]
