[project]
name = "muppet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "langfuse>=4.0.0",
    "langgraph>=1.1.0",
    "paramiko>=4.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.16.0",
    "rich>=14.0.0",
    "uvicorn>=0.40.0",
]
